<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_RunTimeLogger" Id="{7ff50c6a-0345-4ddf-b78e-89577d0f9512}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	g_infoLogBufferSize :DINT := 10000;
	g_debugLogBufferSize :DINT := 40000;
		
	// info logger header
	g_infoHeaderNum :INT  := 4;
	g_infoHeader :ARRAY[1..g_infoHeaderNum] OF STRING(255) := ['AgiBot-SlaveController$N', 'Sofeware Version: ',g_SWVersion,
				'$N#######################################################################################$N'];
END_VAR
VAR_GLOBAL
	g_stopLogFlag :BOOL :=FALSE; //signal may come from UI, false to stop current logger, true to start log with new file  
	
	g_localSystemTime : FB_LocalSystemTime:= (bEnable := TRUE, dwCycle := 1 );
	
	// info logger variables
	g_infoLogReady :BOOL :=FALSE;
	g_infoLogBufferLock :BOOL :=FALSE;
	g_infoLogBuffer :ARRAY[1..g_infoLogBufferSize] OF LogDataType;
	g_infoLogBufferInPtr :DINT:=1;
	g_infoLogBufferOutPtr :DINT:=1;
	
	// debug logger variables
	g_enableDebugLog :BOOL :=FALSE;
	g_debugLogReady :BOOL := FALSE;
	g_debugLogBufferLock :BOOL :=FALSE;
	g_debugLogBuffer :ARRAY[1..g_debugLogBufferSize] OF LogDataType;
	g_debugLogBufferInPtr :DINT:=1;
	g_debugLogBufferOutPtr :DINT:=1;
END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>