<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="AGILOG_DEBUG" Id="{4d128e6a-b240-42fa-a96e-9a12f0ed4525}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION AGILOG_DEBUG : BOOL
VAR_INPUT
	i_logData : ANY;
	i_printTime :BOOL :=TRUE;
	i_lineBreak :INT :=0;//add a byte at the line end. 0: nothing, 1: new line, 2: space

END_VAR
VAR
	tmpData : LogDataType;
	checkIdx:INT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT(GVL_RunTimeLogger.g_enableDebugLog) THEN
	RETURN;
END_IF

// data decode
tmpData.m_dataType := i_logData.TypeClass;
tmpData.m_dataSize := MIN(i_logData.diSize,96);
tmpData.m_lineBreak := i_lineBreak;
tmpData.m_printTime := i_printTime;
tmpData.m_timeStamp := GVL_RunTimeLogger.g_localSystemTime.systemTime;
MEMCPY(ADR(tmpData.m_data), i_logData.pValue, tmpData.m_dataSize);

FOR checkIdx :=1 TO 20 DO 
	IF TestAndSet(GVL_RunTimeLogger.g_debugLogBufferLock) THEN
		GVL_RunTimeLogger.g_debugLogBuffer[GVL_RunTimeLogger.g_debugLogBufferInPtr] := tmpData;
		// step pointer
		IF GVL_RunTimeLogger.g_debugLogBufferInPtr >= GVL_RunTimeLogger.g_debugLogBufferSize THEN
			GVL_RunTimeLogger.g_debugLogBufferInPtr := 1;
		ELSE
			GVL_RunTimeLogger.g_debugLogBufferInPtr:=GVL_RunTimeLogger.g_debugLogBufferInPtr+1;
		END_IF
		GVL_RunTimeLogger.g_debugLogBufferLock := FALSE;
		EXIT;
	END_IF
END_FOR




]]></ST>
    </Implementation>
    <LineIds Name="AGILOG_DEBUG">
      <LineId Id="137" Count="2" />
      <LineId Id="298" Count="0" />
      <LineId Id="342" Count="2" />
      <LineId Id="346" Count="1" />
      <LineId Id="125" Count="0" />
      <LineId Id="349" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="107" Count="2" />
      <LineId Id="111" Count="4" />
      <LineId Id="117" Count="1" />
      <LineId Id="105" Count="1" />
      <LineId Id="94" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>